--- a/index.html
+++ b/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BridgePoint</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to BridgePoint 🌍</h1>
-    <p>Connecting people. Building understanding.</p>
+    <h1>🌉 BridgePoint</h1>
   </header>
-
   <main>
-    <section>
-      <h2>Our Mission</h2>
-      <p>BridgePoint is here to connect communities and promote dialogue in a polarized world.</p>
-    </section>
+    <p class="welcome">Welcome to BridgePoint — connecting people, cultures, and opportunities.</p>
+    <button onclick="getStarted()">Get Started</button>
   </main>
-
   <footer>
-    <p>© 2025 BridgePoint</p>
+    <p>© 2025 BridgePoint. All rights reserved.</p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
