updated index.html with full BridgePoint design

--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BridgePoint</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>🌉 BridgePoint</h1>
+      <p>Connecting people, cultures, and opportunities.</p>
+    </header>
 
+    <main>
+      <section class="hero">
+        <h2>Structure with Soul</h2>
+        <p>
+          A minimal and sleek platform designed to bring people together,
+          foster understanding, and create new possibilities.
+        </p>
+        <button onclick="alert('Thanks for connecting with BridgePoint!')">
+          Get Started
+        </button>
+      </section>
+
+      <section class="about">
+        <h2>About</h2>
+        <p>
+          BridgePoint is about clarity, impact, and connection. We believe in
+          building with purpose and creating tools that bring people closer,
+          reduce inequality, and open doors for peace ✌️.
+        </p>
+      </section>
+
+      <section class="work">
+        <h2>Work</h2>
+        <ul>
+          <li>📍 Interactive Map Project</li>
+          <li>🌐 Personal Website Builds</li>
+          <li>🔮 Creative Concepts</li>
+        </ul>
+      </section>
+
+      <section class="connect">
+        <h2>Connect</h2>
+        <p>Open to collaborations and new opportunities.</p>
+        <button>Email</button>
+        <button>LinkedIn</button>
+      </section>
+    </main>
+
+    <footer>
+      <p>© 2025 BridgePoint. Built with structure + soul.</p>
+    </footer>
+
+    <script src="script.js"></script>
+  </body>
+</html>
