--- a/index.html
+++ b/index.html
@@ -1,5 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BridgePoint</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <div class="logo">🌉 BridgePoint</div>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#features">Features</a>
+      <a href="#connect">Connect</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h1>Connecting People, Building Understanding</h1>
+    <p>BridgePoint helps bring people together across divides to foster unity and understanding.</p>
+    <button onclick="scrollToSection('about')">Learn More</button>
+  </section>
+
+  <section id="about">
+    <h2>About BridgePoint</h2>
+    <p>
+      In today’s polarized world, we believe dialogue and connection can
+      transform relationships. BridgePoint is designed to be a safe,
+      sleek space for that.
+    </p>
+  </section>
+
+  <section id="features">
+    <h2>Features</h2>
+    <ul>
+      <li>💬 Open Conversations</li>
+      <li>🌍 Global Connections</li>
+      <li>🔒 Secure & Reliable</li>
+    </ul>
+  </section>
+
+  <section id="connect">
+    <h2>Join the Movement</h2>
+    <p>Be part of the BridgePoint community and help build bridges, not walls.</p>
+    <button onclick="alert('Coming soon!')">Get Started</button>
+  </section>
+
+  <footer>
+    <p>© 2025 BridgePoint. All rights reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
